# irt

./: .gitignore  Cargo.toml  README.md
src/: irt.rs  main.rs
src/irt/: aabb.rs  axis.rs  bvh.rs  camera.rs  color.rs  hittable.rs  interval.rs  material.rs  matrix.rs  noise.rs  point.rs  quad.rs  ray.rs  sphere.rs  texture.rs  triangle.rs  utils.rs  vec3.rs
