[package]
name = "irt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = { version = "0.26", features = ["derive"] }

[lints.clippy]
needless_return = "allow"
only_used_in_recursion = "allow"

[profile.release]
debug = true
