[package]
name = "irt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.6"
indicatif = { version = "0.17.9", features = ["rayon"] }
itertools = "0.14.0"
rand = "0.8.5"
rayon = "1.10.0"

[lints.clippy]
needless_return = "allow"
only_used_in_recursion = "allow"

[profile.release]
debug = true
